--- a/api/contract.yaml
+++ b/api/contract.yaml
@@ -174,6 +174,27 @@ paths:
           $ref: '#/components/responses/403'
         default:
           $ref: '#/components/responses/500'
+  /auth/profile:
+    get:
+      operationId: authMyProfile
+      security:
+        - BearerAuth: []
+      responses:
+        200:
+          description: success getting profile
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/userProfile'
+        401:
+          $ref: '#/components/responses/401'
+        403:
+          $ref: '#/components/responses/403'
+        default:
+          $ref: '#/components/responses/500'
+
+      tags:
+        - auth
 
 components:
   schemas:
@@ -278,21 +299,29 @@ components:
         - email
         - password
         - fullName
+    userProfile:
+      type: object
+      properties:
+        id:
+          type: integer
+        email:
+          type: string
+          format: email
+          example: dummy@gmail.com
+        fullName:
+          type: string
+          example: John Doe
+      required:
+        - id
+        - email
+        - fullName
     registerResponse:
       type: object
       properties:
         userData:
-          allOf:
-            - type: object
-              properties:
-                id:
-                  type: integer
-              required:
-                - id
-            - $ref: '#/components/schemas/registerRequest'
+          $ref: '#/components/schemas/userProfile'
       required:
         - userData
-
   responses:
     400:
       description: bad request error
